infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha-expiration
  template:
    metadata:
      labels:
        app: alpha-expiration
    spec:
      containers:
        - name: alpha-expiration
          # image: kavishkamk/hotel-reservation-alpha-expiration
          image: us.gcr.io/ticketing-dev-367104/expiration-alpha
