infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha-auth
  template:
    metadata:
      labels:
        app: alpha-auth
    spec:
      containers:
        - name: alpha-auth
          #image: kavishkamk/hotel-reservation-alpha-auth
          image: us.gcr.io/ticketing-dev-367104/auth-alpha
---
apiVersion: v1
kind: Service
metadata:
  name: alpha-auth-srv
spec:
  selector:
    app: alpha-auth
  ports:
    - name: alpha-auth
      protocol: TCP
      port: 4000
      targetPort: 4000
