infra/k8s/booking-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-booking-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha-booking
  template:
    metadata:
      labels:
        app: alpha-booking
    spec:
      containers:
        - name: alpha-booking
          #image: kavishkamk/hotel-reservation-alpha-booking
          image: us.gcr.io/ticketing-dev-367104/booking-alpha
---
apiVersion: v1
kind: Service
metadata:
  name: alpha-booking-srv
spec:
  selector:
    app: alpha-booking
  ports:
    - name: alpha-booking
      protocol: TCP
      port: 4000
      targetPort: 4000
