infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha-nats
  template:
    metadata:
      labels:
        app: alpha-nats
    spec:
      containers:
        - name: alpha-nats
          image: nats-streaming
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "alphahotelreservation",
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: alpha-nats-srv
spec:
  selector:
    app: alpha-nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
