infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha-payments
  template:
    metadata:
      labels:
        app: alpha-payments
    spec:
      containers:
        - name: alpha-payments
          # image: kavishkamk/hotel-reservation-alpha-payments
          image: us.gcr.io/ticketing-dev-367104/payments-alpha
---
apiVersion: v1
kind: Service
metadata:
  name: alpha-payments-srv
spec:
  selector:
    app: alpha-payments
  ports:
    - name: alpha-payments
      protocol: TCP
      port: 4000
      targetPort: 4000
