infra/k8s/services-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-services-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpha-services
  template:
    metadata:
      labels:
        app: alpha-services
    spec:
      containers:
        - name: alpha-services
          # image: kavishkamk/hotel-reservation-alpha-services
          image: us.gcr.io/ticketing-dev-367104/services-alpha
---
apiVersion: v1
kind: Service
metadata:
  name: alpha-services-srv
spec:
  selector:
    app: alpha-services
  ports:
    - name: alpha-services
      protocol: TCP
      port: 4000
      targetPort: 4000
